--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,7 @@ article {
   border-radius: 5px;
   box-shadow: 0 1px 0 rgba(0,0,0,0.2);
   margin: 0.6em 0.9em;
+  padding: 0 0 1em 0;
 }
 header img {
   display: block;
@@ -143,6 +144,13 @@ h2 {
   letter-spacing: -3px;
   margin: 0;
 }
+h3 {
+  color: #3b84bf;
+  font-family: lucida grande;
+  font-size: 1.5em;
+  letter-spacing: -2px;
+  margin: 0.5em;
+}
 nav {
   overflow-x: hidden;
   position: relative;
@@ -196,6 +204,33 @@ section {
   top: 0em;
   left: 0.45em;
 }
+.autor {
+  color: #808080;
+  font-family: lucida grande;
+  font-weight: none;
+  margin: 0 0.5em 1em 0.5em;
+}
+.caja {
+  background: #ebf0f4;
+  border: 1px solid #c6cfd3;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  margin: 1em;
+}
+.video {
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  position: relative;
+}
+.video iframe {
+  height: 100%;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+}
 .encabezado {
   margin: 0 0 1em 0;
 }
@@ -240,6 +275,9 @@ section {
 .lista:after {
   content: "\e605";
   font-family: icono;
+}
+.fecha {
+  color: #808080;
 }
 .fixed {
   position: fixed;
