--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -57,7 +57,7 @@ article
 	background white
 	border-radius 5px
 	box-shadow 0 1px 0 rgba(black,.2)
-	margin .6em .9em
+	margin .6em .5em
 	padding 0 0 1em 0
 
 body 
@@ -69,6 +69,7 @@ body
 h1
 	font-size 3em;
 	font-family titulo
+	font-weight normal
 	margin 0 0 .5em 0
 	text-align center
 	small
@@ -251,18 +252,18 @@ section
 	box-shadow 0 2px 5px rgba(black,.3)
 	margin 1em
 
-// .video
-// 	height 0
-// 	overflow hidden
-// 	padding-bottom 56.25%
-// 	padding-top 30px
-// 	position relative
-// 	iframe
-// 		height 100%
-// 		left 0px
-// 		position absolute
-// 		top 0px
-// 		width 100%
+.contenedor
+	height 0
+	overflow hidden
+	padding-bottom 56.25%
+	padding-top 30px
+	position relative
+	iframe
+		height 100%
+		left 0px
+		position absolute
+		top 0px
+		width 100%
 
 .encabezado
 	margin 0 0 1em 0
@@ -282,7 +283,7 @@ section
 		&:after
 			border-top solid 0 transparent
 			border-left solid .7em #a9a9a9
-			border-bottom solid 1.4em transparent
+			border-bottom solid 1.5em transparent
 			border-right solid 0 transparent
 			content ""
 			left 2em
@@ -300,7 +301,7 @@ section
 	font-size 1.7em
 	position absolute
 	right .5em
-	top .25em
+	top .4em
 	width 30px
 	&:after
 		content "\e605"
