--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -59,12 +59,12 @@ article
 	box-shadow 0 1px 0 rgba(black,.2)
 	margin .6em .5em
 	padding 0 0 1em 0
-
+	
 body 
 	background fondo
 	color gris
 	font-family texto
-	font-size 16px
+	font-size 15px
 
 h1
 	font-size 3em;
@@ -87,7 +87,7 @@ h2
 	font-weight normal
 	font-size 2em;
 	letter-spacing -3px
-	margin 0 
+	margin .5em 0 .5em 0
 
 h3
 	color azul
@@ -96,6 +96,8 @@ h3
 	font-size 1.5em
 	letter-spacing -2px
 	margin .5em
+	text-align center
+	white-space normal
 
 header
 	img
@@ -195,9 +197,9 @@ nav
 	z-index 5
 
 p
-	margin .5em
+	margin .5em 1em
 	&:first-child 
-		margin 0 .5em
+		margin 0 1em 0 1em
 
 section
 	background #dcdcdc
@@ -206,30 +208,31 @@ section
 
 #mm0
 	background azul
-	border 1px solid fondo
+	border .5px solid rgba(azul,.05)
 	color white
 	font-size 1.5em
 	height 2em
 	left -5px
 	position relative
-	width 108.5%
+	width 109%
 
 .arriba
-	background gris
-	border-radius 50%
 	bottom 1em
 	color white
-	height 3em
+	left 1em
 	opacity .6
 	position fixed
-	left 1em
-	width 3em
 	-webkit-transition all .2s ease
 	transition all .2s ease
 	a 
+		background gris
+		border-radius 50%
 		color: white;
-		text-decoration none
+		display block
+		height 3em
 		position relative
+		text-decoration none
+		width 3em
 		&:after
 			content "\e608"
 			font-family icono
@@ -244,13 +247,24 @@ section
 	font-family mayuscula
 	font-weight none
 	margin 0 .5em 1em .5em
+	text-align center
 
 .caja
 	background claro
 	border 1px solid borde
 	border-radius 4px
 	box-shadow 0 2px 5px rgba(black,.3)
-	margin 1em
+	display inline-block
+	margin 1em .2em
+	vertical-align top
+	width 90%
+	&:first-child
+		margin 1em .2em 1em .5em
+	.autor
+	.fecha
+	.resumen
+		margin 1em
+		white-space normal
 
 .contenedor
 	height 0
@@ -296,6 +310,12 @@ section
 		margin .4em .5em 0 2em
 		text-align left
 
+.horizontal
+	white-space nowrap
+	overflow-x auto
+	&::-webkit-scrollbar
+		display none
+
 .lista
 	color white
 	font-size 1.7em
@@ -311,7 +331,8 @@ section
 	color grey
 
 .fixed 
-	position fixed
+	box-shadow 0 2px 2px rgba(azul,.5)
 	left 0px
-	top -1px
+	position fixed
 	right 0px
+	top -1px
