Corregido estilo de cajas horizontales
Ahora mismo todo funciona al 100%

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -225,7 +225,7 @@ section {
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.3);
   display: inline-block;
-  margin: 1em 0.2em;
+  margin: 0 0.2em;
   vertical-align: top;
   width: 90%;
 }
@@ -236,6 +236,7 @@ section {
 .caja .fecha,
 .caja .resumen {
   margin: 1em;
+  font-size: 0.8em;
   white-space: normal;
 }
 .contenedor_imagen {
@@ -316,8 +317,8 @@ section {
   text-align: left;
 }
 .horizontal {
-  white-space: nowrap;
   overflow-x: auto;
+  white-space: nowrap;
 }
 .horizontal::-webkit-scrollbar {
   display: none;
