--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -265,7 +265,7 @@ section
 	border-radius 4px
 	box-shadow 0 2px 5px rgba(black,.3)
 	display inline-block
-	margin 1em .2em
+	margin 0 .2em
 	vertical-align top
 	width 90%
 	&:first-child
@@ -274,6 +274,7 @@ section
 	.fecha
 	.resumen
 		margin 1em
+		font-size .8em
 		white-space normal
 
 .contenedor_imagen
@@ -346,8 +347,8 @@ section
 		text-align left
 
 .horizontal
-	white-space nowrap
 	overflow-x auto
+	white-space nowrap
 	&::-webkit-scrollbar
 		display none
 
