--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -59,8 +59,6 @@ claro = #ebf0f4
 // 	content: "\e60a";
 // }
 
-
-
 article
 	background white
 	border-radius 5px
@@ -137,7 +135,7 @@ footer
 			border-radius 50%
 			box-shadow 0 0 2px black
 			height auto
-			left 1.3em
+			left 1em
 			position absolute
 			top 1em
 			width 3em
@@ -146,11 +144,12 @@ footer
 		p
 			color gris
 			font-size 1em
-			left 4.7em
+			left 4em
 			line-height 1.1em;
 			position absolute
 			text-align left
-			top .9em
+			top 1.5em
+			white-space nowrap
 			z-index 4
 
 	.social
@@ -175,7 +174,7 @@ footer
 		.twitter
 			right .5em
 			text-decoration none
-			top .8em
+			top .7em
 			&:before
 				content "\e606"
 			&:hover
@@ -184,17 +183,17 @@ footer
 		.github
 			right .5em
 			text-decoration none
-			top 2.8em
+			top 2.7em
 			&:before
 				content "\e609"
 			&:hover
-				color grey
+				color gris
 				text-decoration none
 
 		.email
 			right .5em
 			text-decoration none
-			top 4.8em
+			top 4.7em
 			&:before
 				content "\e602"
 			&:hover
@@ -323,8 +322,9 @@ section
 		float left
 		font-family mayuscula
 		font-size .5em
-		height 1.4em 
-		margin 1.2em 1.5em 0 0
+		height 1.7em 
+		line-height 1.6
+		margin 1em 1.5em 0 0
 		padding .15em 0 0 0 
 		position relative
 		text-align center
@@ -333,7 +333,7 @@ section
 		&:after
 			border-top solid 0 transparent
 			border-left solid .7em azul
-			border-bottom solid 1.6em transparent
+			border-bottom solid 1.8em transparent
 			border-right solid 0 transparent
 			content ""
 			left 2em
