--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -205,6 +205,7 @@ nav
 	z-index 5
 
 p
+	line-height 1.4
 	margin .5em 1em
 	&:first-child 
 		margin 0 1em 0 1em
@@ -269,6 +270,8 @@ section
 	width 90%
 	&:first-child
 		margin 0 .2em 1em 1em
+	&:last-child
+		margin 0 1em 1em .2em
 	.autor
 	.fecha
 	.resumen
@@ -322,8 +325,9 @@ section
 		float left
 		font-family mayuscula
 		font-size .5em
+		font-weight bold
 		height 1.7em 
-		line-height 1.6
+		line-height 1.5
 		margin 1em 1.5em 0 0
 		padding .15em 0 0 0 
 		position relative
